# writestead

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  package.json  report.md  report3.md
.github/workflows/: ci.yml  release.yml
lib/: platform.js  run.js
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
scripts/: sync-npm-version.cjs
src/: config.rs  daemon.rs  doctor.rs  guide.rs  lib.rs  main.rs  mcp.rs  raw.rs  server.rs  syncer.rs  vault.rs  wiki.rs  wiki_lint.rs
tests/: cli_smoke.rs  doctor_cli.rs  e2e.rs  mcp_contract.rs  metrics_raw.rs  raw_add_cli.rs  raw_unit.rs  wiki_unit.rs
tests/fixtures/: tools_list.json
