[package]
name = "writestead"
version = "0.1.10"
edition = "2021"
description = "LLM Wiki"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ahkohd/writestead"
homepage = "https://github.com/ahkohd/writestead"
documentation = "https://docs.rs/writestead"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
subtle = "2.6"
tempfile = "3.13"
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
walkdir = "2.5"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
tower = { version = "0.5", features = ["util"] }
